examples/errors/parsing/let_plain-trailing-semi.cn
fun f : Int -> Int [pure] = {
  n ->
  let x = n + 1;
}

main : () [impure] = ()
